2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/sparc64/dl.c (grub_arch_dl_relocate_symbols): Check
	range of R_SPARC_HI22.
	Implement R_SPARC_LM22.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/powerpc/dl_helper.c (grub_arch_dl_get_tramp_got_size):
	Do not explicitly check for symbol table as it's already checked in
	platform-independent layer.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/cache.c [__ia64__]: Use our cache cleaning routine
	on ia64 as __clear_cache is a dummy on ia64.

2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ia64/dl_helper.c (grub_ia64_dl_get_tramp_got_size):
	Do not explicitly check for symbol table as it's already checked in
	platform-independent layer.

2013-12-09  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig.in: Add missing newline to output.

2013-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ia64/efi/init.c (grub_arch_sync_caches): Move to ...
	* grub-core/kern/ia64/cache.c (grub_arch_sync_caches): ... here.

2013-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/main.c: Silence missing prototypes to allow emu
	compilation with GCC <= 4.2.
	* grub-core/kern/emu/argp_common.c: Likewise.

2013-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h [__sparc__]: Restrict sparc64-ieee1275 to
	right platform rather than leaking to sparc64-emu.

2013-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/windows/emuconsole.c: Remove unsigned comparison >= 0.
	But ensure that the variables in question are indeed unsigned.

2013-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/lite.c: Add missing include of ../ia64/dl_helper.c.

2013-12-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove grub_memalign on emu.

2013-12-08  Vladimir Serbinenko  <phcoder@gmail.com>
