@@ -1,5 +1,9 @@
 2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Implement sparc64 trampolines (needed for sparc64-emu).
+
+2013-12-09  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/sparc64/dl.c (grub_arch_dl_relocate_symbols): Check
 	range of R_SPARC_HI22.
 	Implement R_SPARC_LM22.
